test/libsolidity/syntaxTests/dataLocations/transient_fixed_array_state_variable.sol
contract C {
	uint[3] transient x;
}
// ====
// EVMVersion: >=cancun
// ----
// UnimplementedFeatureError 1834: Transient data location is only supported for value types.
